--- a/.github/workflows/c-cpp-ci.yml
+++ b/.github/workflows/c-cpp-ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup build directory
-        run: mkdir build
+        run: mkdir -p build
 
       - name: Configure CMake
         run: cmake -S . -B build -DCMAKE_INSTALL_PREFIX=/usr
@@ -25,6 +25,10 @@ jobs:
         run: cmake --build build -- -j$(nproc)
         shell: bash {0}
 
+      - name: Install
+        run: sudo cmake --install build
+        shell: bash {0}
+
       - name: Run tests
-        run: ctest --test-dir build
+        run: ctest --test-dir build --output-on-failure
         shell: bash {0}
