--- a/.github/workflows/c-cpp-ci.yml
+++ b/.github/workflows/c-cpp-ci.yml
@@ -32,3 +32,8 @@ jobs:
       - name: Run tests
         run: ctest --test-dir build --output-on-failure
         shell: bash {0}
+
+      - name: Run benchmarks
+        run: ./build/run_benchmark
+        shell: bash {0}
+
