--- a/.github/workflows/c-cpp-ci.yml
+++ b/.github/workflows/c-cpp-ci.yml
@@ -37,3 +37,7 @@ jobs:
         run: ./build/run_benchmark
         shell: bash {0}
 
+      - name: Lookup
+        run: bin_lookup --bin 440393
+        shell: bash {0}
+
